2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarBrushConverter.cs: Some fixes.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarBrushConverter.cs: Visual appearance is very close now, however the performance is not.

2007-07-02  George Giolfan  <georgegiolfan@yahoo.com>

	* ProgressBarBrushConverter.cs: Added.

2007-06-05  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChrome.cs: Fixed MeasureOverride.

2007-06-03  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonChrome.cs: Fixed MeasureOverride.

2007-05-31  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Fixed non-glyph rendering.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Fixed HasOuterBorder support.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Fixed HasOuterBorder default value.

2007-05-25  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Added support for Padding.

2007-05-23  George Giolfan  <georgegiolfan@yahoo.com>

	* ScrollChrome.cs: Added gripper drawing.