@@ -1,0 +1,16 @@
+using System.Globalization;
+using System.Windows;
+#if Implementation
+namespace Mono.Microsoft.Windows.Themes {
+#else
+namespace Microsoft.Windows.Themes {
+#endif
+	public static class PlatformCulture {
+		public static FlowDirection FlowDirection {
+			get {
+				return CultureInfo.CurrentUICulture.TextInfo.IsRightToLeft ? FlowDirection.RightToLeft : FlowDirection.LeftToRight;
+			}
+		}
+	}
+
+}
